# franchise-football

./: .coverage  .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  tatus  test.txt
app/: __init__.py
app/core/: config.py  logging.py  random.py
app/data/: depth_chart.csv  players.csv  teams.csv
app/models/: __init__.py  database.py  depth_chart.py  dtos.py  game_result.py  player.py  player_stats.py  team.py  user_profile.py
app/services/: __init__.py
app/services/importer/: __init__.py  generator.py  ingest.py  schemas.py
app/ui/: api.py
franchise_football.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: check_depth_vs_players.py  check_env.py  generate_roster.py  import_roster.py  peek_team.py  verify_import.py
tests/: __init__.py  test_api_dtos.py  test_db_helpers.py  test_health.py  test_importer_generator.py  test_importer_ingest.py  test_models.py  test_rng.py
